buttons back on 3 views,js file

--- a/app/views/character/list.html.erb
+++ b/app/views/character/list.html.erb
@@ -2,6 +2,10 @@
     background-color: #f4f7ff;
 }</style>
 
+<nav>
+  <%= button_to "Назад", root_path, method: :get, class:"back_button"%>
+</nav>
+
 <div style="text-align: center">
   <%= button_to "Создать нового персонажа", character_new_path, method: :get, class:"home_button"%>
 </div>
