--- a/app/views/room/show.html.erb
+++ b/app/views/room/show.html.erb
@@ -2,6 +2,10 @@
   <%= javascript_import_module_tag  "show" %>
 <% end %>
 <div>
+  <nav>
+    <%= button_to "Назад", root_path, method: :get, class:"back_button"%>
+  </nav>
+
   <p>Код подключения: <%= @room_tag %></p>
   <input type="hidden" id="player_id" value="<%= @current_user.id %>" >
   <div id='chat-box'>
